no need to be important

--- a/notext.css
+++ b/notext.css
@@ -1,4 +1,4 @@
 [aria-label='Timeline: Your Home Timeline'] * {
-    font-size: 0 !important;
-    line-height: 0 !important;
+    font-size: 0;
+    line-height: 0;
 }
